# pydantic-mongo-odm

./: .coverage  .gitignore  .gitlab-ci.yml  docker-compose.yml  pyproject.toml  rs-init.sh  setup.cfg
src/overlead/odm/: __init__.py  client.py  errors.py  index.py  metamodel.py  model.py  monkey_patch.py  triggers.py  types.py  utils.py
src/overlead/odm/fields/: __init__.py  file_field.py  objectid_field.py  reference_field.py
src/overlead/odm/motor/: __init__.py  cursor.py  model.py
stubs/wrapt-stubs/: __init__.pyi  wrapt.pyi
tests/: conftest.py  test_fields.py  test_index.py  test_metamodel.py  test_model.py  test_model_indexes.py  test_undefined.py
tests/fields/: test_fields.py  test_file_field.py
tests/motor/: test_model.py  test_motor.py  test_triggers.py  test_type_codecs.py
tests/test_motor/: test_model.py  test_motor.py  test_triggers.py  test_type_codecs.py
typings/motor/: core.pyi  docstrings.pyi  metaprogramming.pyi  motor_gridfs.pyi  motor_tornado.pyi
typings/motor-stubs/: core.pyi  motor_asyncio.pyi  motor_gridfs.pyi
typings/motor/frameworks/asyncio/: __init__.pyi
typings/motor/frameworks/tornado/: __init__.pyi
