[tool.poetry]
name = "overlead-odm"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "overlead", from = "src" },
  { include = "*", from = "typings" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pymongo = "^3.11.4"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
yapf = "^0.31.0"
flake8 = "^3.9.2"
isort = "^5.8.0"
pymongo-stubs = "^0.1.0"
pytest-asyncio = "^0.15.1"
taskipy = "^1.8.1"

[[tool.poetry.source]]
name = "gitlab-overlead"
url = "https://gitlab.com/api/v4/groups/2174930/packages/pypi"

[tool.taskipy.tasks]
lint = "mypy src/"
test = "pytest ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
